bin/tests/lexer/errors/invalid_chars.swg
#global fileprivate
// swc-option lex-only

// ============================================================================
// Lexer Invalid Ok
// ============================================================================

// swc-option lex-only

// (vide)

¤ // swc-expected-error {{lex_err_invalid_char}}
